@@ -219,15 +219,17 @@ corresponding Perl object.  Not all functions are currently implemented;
 consult the source for details.
 
 Many libmtp functions return a linked list of structures.  In
-Media::LibMTP::API, you get the next struct by calling an accessor
-method.  You must preserve the reference to the first struct returned
-by libmtp until you are done with all the structures in the list,
-because when that reference is dropped, the entire list will be
-deleted.  This is the purpose of the AlbumList, FileList, FolderList,
-MTPDeviceList, PlaylistList, and TrackList subclasses: they have a
-destructor that cleans up the list.  For example, the
-C<Get_Album_List> method returns an AlbumList object (a subclass of
-Album), but C<< $album->next >> returns an Album object.
+Media::LibMTP::API, this is managed by having two classes for each
+type of object.  The initial structure represents the entire list, and
+will be one of these subclasses: AlbumList, FileList, FolderList,
+MTPDeviceList, PlaylistList, or TrackList.  These are exactly the same
+as the non-List types, except that their destructor cleans up the list.
+The non-List types keep a hidden reference to their parent List
+object, so you don't need to worry about the list being freed too
+soon.  No memory is released as long as any object in the list is
+still referenced.  (e.g., if you get a 10,000 object list, and keep a
+reference to only 1 object, the entire list is kept in memory until
+you're done with that 1 object.)
 
 =head1 DEPENDENCIES
 
@@ -238,6 +240,8 @@ libmtp 1.1.0 or later
 L<Media::LibMTP>.
 
 L<http://libmtp.sourceforge.net>
+
+L<http://en.wikipedia.org/wiki/Media_Transfer_Protocol>
 
 The libmtp documentation generated by Doxygen.
 
